# RemoteTerminal

./: .gitignore  Caddyfile  LICENSE  README.md  README.zh-CN.md  build_frontend.sh  install_caddy.sh  start_backend.sh  start_backend_caddy.sh  start_caddy.sh  start_frontend.sh
backend/: .env.caddy.local  .env.example  .env.local  Cargo.toml
backend/src/: app.rs  db.rs  error.rs  main.rs  models.rs  runtime.rs
deploy/runtime/: run_backend.sh.template
deploy/systemd/: remoteterminal.env.example  remoteterminal.service.template
docs/: ARCHITECTURE.md  PUBLIC_ACCESS_SECURITY.md  SYSTEMD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.ts  App.vue  style.css
scripts/: build_frontend.sh  install_local_ttyd.sh  install_systemd_service.sh  publish_runtime.sh  run_backend_service.sh  start_all.sh  start_backend.sh  start_backend_caddy.sh  start_caddy.sh  start_frontend.sh  stop_all.sh  test_all.sh
tools/ws-debug-extension/: content.js  manifest.json
